--- a/channels.html
+++ b/channels.html
@@ -34,7 +34,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="whoWeAre.html">من نحن</a>
+              <a class="nav-link active" href="channels.html">القنوات</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">تواصل معنا</a>
